--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,4 @@
-.uk-card {
-    margin: 10px;
-    width: 210px;
-
-}
-
-h3 {
-    font-family: 'Lobster Two', cursive;
-}
-
-
+/* navbar/intial body */
 body {
     background-image: url("../images/plaid.png");
     background-repeat: repeat;
@@ -18,12 +8,21 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+.everything-container{
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3em;
+    margin-bottom: 3em;
+}
+
 a {
     color:inherit; 
 }
+
 a:hover {
-    color: currentColor;
-    text-shadow: 0 0 5px #000000;
+    color: blanchedalmond;
+    text-shadow: 0 0 10px #000000;
 }
 
 .uk-navbar-container {
@@ -41,17 +40,6 @@ a:hover {
     background: #41414c; 
 }
 
-footer {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background: #666666;
-    color: #8d8d8d;
-    height: 2em;
-    padding: 1em;
-    text-align: center;
-}
-
 .uk-logo {
     color: #ff3860;
     font-family: 'Lobster Two', cursive;
@@ -59,9 +47,21 @@ footer {
     font-size: 40px;
 }
 
-
 .uk-navbar-nav {
     padding: 10px;
+}
+
+.sign-up-login{
+    border: 0px solid #ff3860;
+    color:#ff3860;
+    margin-top: 10px;
+    font-weight: 200;
+    font-size: 20px;
+}
+
+.sign-up-login:hover {
+    color: blanchedalmond;
+    text-shadow: 0 0 10px #ff3860;
 }
 
 .uk-button-large {
@@ -72,56 +72,103 @@ footer {
     height: 53px;
 }
 
-.meat-button {
+/* modal */
+.uk-modal-body {
+    border: 5px solid #ff3860;
+    border-radius: 5%;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 2em;
+}
+
+h4 {
+    font-family: 'Lobster Two', cursive;
+}
+
+.form-control { /*also for usersubmit */
+    height: 1.5em;
+    width: 200px;
+}
+
+#sign-up-button, #login-button {
+    background-color: rgba(255,56,96, 0.5) !important;
+    background-blend-mode: color;
+}
+
+.uk-modal-close-default {
+    position: initial;
+}
+
+/* user choices */
+.title-headers{
+    width: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    text-align: center;
+    color: blanchedalmond;
+    text-shadow: 0 0 10px #000000;
+}
+
+.title-headers:hover {
+    color: blanchedalmond;
+    text-shadow: 0 0 10px #ff3860;
+}
+
+.submit-button{
+    margin-top: 10px;
+} 
+
+.allergens-header{
+    background: url(“../images/allergen.jpg”) center center fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.75;
+ }
+
+.meats-header{
+    background: url("../images/steak.jpg")center center fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.75;
+}
+
+.veggies-header{
+    background: url("../images/vegetables.jpg")center center fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.75; 
+}
+
+.carbs-header{
+    background: url("../images/carbs.jpg")center center fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.75;  
+}
+
+.dairy-header{
+    background: url("../images/dairy.jpg")center center fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.75;
+}    
+
+.user-additions-header{
+    background: url("../images/cutlery.jpg")center center fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.75;   
+}
+
+.meat-button-container, .veggie-button-container, .carb-button-container, .dairy-button-container, .allergen-button-containers {
+    margin-left: 20px;
+}
+
+.meat-button, .veggie-button, .carb-button, .dairy-button,  .user-button, .allergen-button {
     background-color: rgba(206,212,218, 0.5) !important;
     background-blend-mode: color;
 }
 
-.meat-button:hover {
-    border: 4px solid #ff3860;
-    background-color: rgba(206,212,218, 0.5) !important;
-    background-blend-mode: color;
-}
-
-.veggie-button {
-    background-color: rgba(206,212,218, 0.5) !important;
-    background-blend-mode: color;
-}
-
-.veggie-button:hover {
-    border: 4px solid #ff3860;
-    background-color: rgba(206,212,218, 0.5) !important;
-    background-blend-mode: color;
-}
-
-.carb-button {
-    background-color: rgba(206,212,218, 0.5) !important;
-    background-blend-mode: color;
-}
-
-.carb-button:hover {
-    border: 4px solid #ff3860;
-    background-color: rgba(206,212,218, 0.5) !important;
-    background-blend-mode: color;
-}
-
-.dairy-button {
-    background-color: rgba(206,212,218, 0.5) !important;
-    background-blend-mode: color;
-}
-
-.dairy-button:hover {
-    border: 4px solid #ff3860;
-    background-color: rgba(206,212,218, 0.5) !important;
-    background-blend-mode: color;
-}
-
-.user-button {
-    background-color: rgba(206,212,218, 0.5) !important;
-    background-blend-mode: color;
-}
-
-.user-button:hover {
+.meat-button:hover, .veggie-button:hover, .carb-button:hover, .dairy-button:hover, .user-button:hover, .allergen-button:hover  {
     border: 4px solid #ff3860;
     background-color: rgba(206,212,218, 0.5) !important;
     background-blend-mode: color;
@@ -134,54 +181,56 @@ footer {
     font-weight: 200;
 }
 
-.everything-container{
-    width: 50%;
-    margin-top: 3em;
-    margin-bottom: 3em;
+.log{
+    width: 45%;
+    line-height: 1em;
+    padding: 15px;
 }
 
-.title-headers{
+.search-bar{
+    width:70%;
+    height: 30px;
+    margin-left:20px;
+}
+
+.search{
+    background-color: rgba(206,212,218, 0.5) !important;
+    background-blend-mode: color;
+    width: 20%;
+    height: 35px;
+    margin-left:10px;
+}
+
+.cook{
+    background-color: rgba(255,56,96, 0.5) !important;
+    background-blend-mode: color;
+    width: 12.5%;
+    position: fixed;
+    right: 0px;
+    bottom: 0px;
+    z-index: 0;
+}
+
+/* recipes */
+.recipes-additions-header{
+    background-image: url("../images/spices.jpg");
+    background-size: cover;
+    opacity: 0.75;   
+}
+
+.uk-card-media-bottom {
+    max-width: 300px;
+}
+
+/* footer */
+footer {
+    left: 0;
+    bottom: 0;
     width: 100%;
-    color: white;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    background: #666666;
+    color: #8d8d8d;
+    height: 2em;
+    padding: 1em;
     text-align: center;
 }
 
-.title-headers:hover {
-    color: white;
-    text-shadow: 0 0 5px #ff3860;
-}
-
-
-
-
-.meats-header{
-    background-image: url("../images/steak.jpg");
-    background-size: contain;
-    opacity: 0.75;
-}
-
-.veggies-header{
-    background-image: url("../images/vegetables.jpg");
-    background-size: cover;
-    opacity: 0.75;
-}
-
-.carbs-header{
-    background-image: url("../images/carbs.jpg");
-    opacity: 0.75;
-}
-
-.dairy-header{
-    background-image: url("../images/dairy.jpg");
-    background-size: cover;
-    opacity: 0.75;
-}
-
-.user-additions-header{
-    background-image: url("../images/cutlery.jpg");
-    background-size: cover;
-    opacity: 0.75;
-    color: white;
-}
