--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,7 @@ body {
     margin-top: 3em;
     margin-bottom: 3em;
 }
+
 a {
     color:inherit; 
 }
@@ -199,4 +200,13 @@ footer {
     height: 2em;
     padding: 1em;
     text-align: center;
+}
+
+#recipesHere{
+    margin-left: 40px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
